...
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/biometric_button"
                    />

                <Button
                    android:id="@+id/register_button"
                    android:text="@string/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/register_text"/>

...
